Fixing Autoloader errors and shell improvements

--- a/devops/docker/Dockerfile
+++ b/devops/docker/Dockerfile
@@ -1,6 +1,9 @@
 # Get the php 8.2 image
 FROM php:8.2-cli
 
+# Update the Container and add some required libs
+RUN apt-get update && apt-get install -y zip unzip
+
 # Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- \
 --install-dir=/usr/bin --filename=composer
