--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,18 @@
 {
-    "name": "marcos/challenge",
-    "require": {},
+    "name": "root/html",
+    "type": "project",
     "autoload": {
         "psr-4": {
             "App\\": "src/"
         }
+    },
+    "authors": [
+        {
+            "name": "Marcos Vinicius"
+        }
+    ],
+    "require-dev": {
+        "phpstan/phpstan": "*",
+        "friendsofphp/php-cs-fixer": "^3.60"
     }
 }
