--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     ],
     "require-dev": {
         "phpstan/phpstan": "*",
-        "friendsofphp/php-cs-fixer": "^3.60"
+        "friendsofphp/php-cs-fixer": "^3.60",
+        "phpunit/phpunit": "^11"
     }
 }
